--- a/agent-code/Dockerfile
+++ b/agent-code/Dockerfile
@@ -2,12 +2,22 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
+# Copy requirements first for better caching
 COPY requirements.txt .
+
+# Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+# Copy application code
 COPY agent.py .
 COPY templates/ templates/
 
-EXPOSE 8080
+# Expose port
+EXPOSE 8001
 
-CMD ["gunicorn", "--bind", "0.0.0.0:8080", "--workers", "2", "--timeout", "120", "agent:app"]
+# Set environment variables
+ENV PORT=8001
+ENV PYTHONUNBUFFERED=1
+
+# Run the application with gunicorn
+CMD ["gunicorn", "--bind", "0.0.0.0:8001", "--workers", "2", "--timeout", "120", "agent:app"]
