--- a/kubernetes/02-vllm-configmap.yaml
+++ b/kubernetes/02-vllm-configmap.yaml
@@ -1,18 +1,9 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: vllm-chat-template
+  name: vllm-config
+  namespace: default
 data:
-  chat_template.jinja: |
-    {% for message in messages %}
-    {% if message['role'] == 'system' %}
-    {{ '<|start_header_id|>system<|end_header_id|>\n\n' + message['content'] + '<|eot_id|>' }}
-    {% elif message['role'] == 'user' %}
-    {{ '<|start_header_id|>user<|end_header_id|>\n\n' + message['content'] + '<|eot_id|>' }}
-    {% elif message['role'] == 'assistant' %}
-    {{ '<|start_header_id|>assistant<|end_header_id|>\n\n' + message['content'] + '<|eot_id|>' }}
-    {% endif %}
-    {% endfor %}
-    {% if add_generation_prompt %}
-    {{ '<|start_header_id|>assistant<|end_header_id|>\n\n' }}
-    {% endif %}
+  MODEL_ID: "meta-llama/Llama-3.1-8B-Instruct"
+  MAX_MODEL_LEN: "4096"
+  GPU_MEMORY_UTILIZATION: "0.9"
