--- a/kubernetes/02-vllm-configmap.yaml
+++ b/kubernetes/02-vllm-configmap.yaml
@@ -5,5 +5,6 @@ metadata:
   namespace: default
 data:
   MODEL_ID: "meta-llama/Llama-3.1-8B-Instruct"
-  MAX_MODEL_LEN: "4096"
+  MAX_MODEL_LEN: "32768"
   GPU_MEMORY_UTILIZATION: "0.9"
+  TENSOR_PARALLEL_SIZE: "1"
