--- a/kubernetes/05-agent-deployment-configured.yaml
+++ b/kubernetes/05-agent-deployment-configured.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: agent
-        image: REGION-docker.pkg.dev/PROJECT_ID/REPOSITORY_NAME/gcp-agent:latest
+        image: asia-northeast1-docker.pkg.dev/amirma-private2/gcp-agent-repo/gcp-agent:latest
         env:
         - name: LLM_BASE_URL
           value: "http://vllm-llama3-service:8000/v1"
